# light-render

./: .gitignore  LICENSE  README.MD
src/: CMakeLists.txt  bitmap.cpp  bitmap.h  bvh_tree.cpp  bvh_tree.h  camera.cpp  camera.h  face.cpp  face.h  geometric_sampler.cpp  geometric_sampler.h  gui_main.cu  main.cpp  main.cu  material.cpp  material.h  matrix_view.h  outline_preview.cpp  outline_preview.h  random_generator.cpp  random_generator.h  ray_intersection.cpp  ray_intersection.h  raycast_benchmark.cpp  vec.h  wavefront_obj.cpp  wavefront_obj.h
src/gpu/: cuda_exception.cuh  gpu_bvh.cuh  gpu_camera.cuh  gpu_face.cuh  gpu_geometric_sampler.cu  gpu_geometric_sampler.cuh  gpu_mtl.cu  gpu_mtl.cuh  gpu_outline_preview.cu  gpu_outline_preview.cuh  gpu_renderer.cu  gpu_renderer.cuh  gpu_texture.cu  gpu_texture.cuh  rand_operations.cuh  vector_operations.cuh
src/gpu/common/: abstract_renderer.cuh  gpu_texture.cu  gpu_texture.cuh  renderer_manager.cu  renderer_manager.cuh
src/gpu/gui/: abstract_image_developer.cuh  abstract_renderer.h  gpu_texture.cu  gpu_texture.cuh  renderer_display.cu  renderer_display.cuh  renderer_manager.cpp  renderer_manager.cu  renderer_manager.cuh  renderer_manager.h
src/gpu/image_developers/: average_image_developer.cu  average_image_developer.cuh  gamma_image_developer.cu  gamma_image_developer.cuh
src/gpu/model/: bvh_tree.cuh  bvh_tree_traversal.cuh  camera.cu  camera.cuh  face.cuh  face_intersection.cuh  float3_operators.cuh  material.cu  material.cuh  material_brdf.cuh
src/gpu/renderers/: gpu_renderer.cu  gpu_renderer.cuh  naive_mc_renderer.cu  naive_mc_renderer.cuh  preview_renderer.cu  preview_renderer.cuh
src/gpu/utils/: curand_helper.cuh  curand_pool.cu  curand_pool.cuh  device_probing.cu  device_probing.cuh  gpu_vector_copy.cuh  image_grid_dim.cu  image_grid_dim.cuh
src/host/bitmap/: bitmap.cpp  bitmap.h
src/host/bvh_builder/: bvh_builder.cu  bvh_builder.cuh  bvh_tree.h  host_bvh_tree.cu  host_bvh_tree.cuh  random_generator.cu  random_generator.cuh
src/host/camera_handling/: camera_configuration.cu  camera_configuration.cuh
src/host/configuration/: configuration.cpp  configuration.h
src/host/gui/: renderer_application.cpp  renderer_application.h  renderer_gui.cpp  renderer_gui.h
src/host/model_loader/: face_builder.cu  face_builder.cuh  material_builder.cu  material_builder.cuh  model.cuh  wavefront_obj.cu  wavefront_obj.cuh
src/host/renderer_frontend/: renderer_frontend.cu  renderer_frontend.h  rendering_status.h
src/host/utils/: chronometer.h
